changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -1573,7 +1573,7 @@
           <div class="row noprint">
             <div class="col-md-8"></div>
             <div class="col-md-2">
-              <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print</button>
+              <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>Print</button>
             </div>
           </div>
           <div id="sanjay">
@@ -1762,10 +1762,10 @@
           <div class="row noprint" style="text-align: center;align-items: center;">
 
             <div class="col-md-12" style="text-align: center;align-items: center;">
-              <button class="btn btn-success" (click)="downloadBillRedFlag()"> download </button>&nbsp;
+              <button class="btn btn-success" (click)="downloadBillRedFlag()"> Download </button>&nbsp;
 
               <button type="button" class="btn btn-danger" aria-label="Close" style="width: 19%;"
-                (click)="d('Cross click')">cancel</button>
+                (click)="d('Cross click')">Cancel</button>
             </div>
           </div>
         </div>
