--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget2/base-tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget2/base-tables-widget2.component.html
@@ -38,7 +38,7 @@
 
       <div class="col-md-2">
         <button type="button" class="btn btn-primary" name="button" (click)="getFilterCRPaymentFORDealer()">
-          submit
+          Submit
         </button>
       </div>
 
@@ -158,10 +158,10 @@
               <thead class="table-light">
                 <tr>
                   <th></th>
-                  <th style="text-align: left;">Key Person Name</th>
-                  <th style="text-align: left;">Key Person Mobile</th>
-                  <th style="text-align: left;">Payment Details</th>
-                  <th style="text-align: left;" *ngIf="dealerView">Created By</th>
+                  <th style="text-align: left;"><b>Key Person Name</b></th>
+                  <th style="text-align: left;"><b>Key Person Mobile</b></th>
+                  <th style="text-align: left;"><b>Payment Details</b></th>
+                  <th style="text-align: left;" *ngIf="dealerView"><b>Created By</b></th>
                 </tr>
               </thead>
               <tbody>
