--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget13/mixed-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget13/mixed-widget13.component.html
@@ -2,7 +2,7 @@
 <form [formGroup]="savedInvoice">
   <div class="row">
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <label for="example-text-input" class="col-lg-3 col-form-label"><b>Customer Select </b></label>
+    <label for="example-text-input" class="col-md-2 col-form-label"><b>Customer Select </b></label>
     <label for="example-text-input" class="col-md-2 col-form-label"><b>Date Range </b></label>
   </div>
   <div class="row">
@@ -58,6 +58,7 @@
     </div>
     <br><br>
     <div class="row">
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <div class="col-auto" (click)="goToInvoice()">
         <button class="btn btn-primary">
           Create Invoice
