--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget2/mixed-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget2/mixed-widget2.component.html
@@ -176,7 +176,7 @@
         </form>
 
         <div class="row">
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;
           <div class="col col-xl-12 col-lg-12">
             <div class="card-body table-responsive">
               <table class="table table-hover table-striped">
