--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget5/mixed-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget5/mixed-widget5.component.html
@@ -198,7 +198,7 @@
 
         <div class="col-lg-1">
           <button type="button" class="btn btn-primary w-md ms-1" name="button" (click)="getCrStatement()">
-            submit
+            Submit
           </button>
         </div>
       </div>
