--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget2/tiles-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget2/tiles-widget2.component.html
@@ -270,6 +270,7 @@
       </div>
       <br><br>
       <div class="row">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <div class="col-auto">
           <button *ngIf="!isSubmit" type="submit" class="btn btn-primary" disabled>Submit</button>
           <button *ngIf="isSubmit" type="submit" class="btn btn-primary" (click)="submitArray()">Submit</button>
