--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget6/trans-tables-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget6/trans-tables-widget6.component.html
@@ -38,7 +38,7 @@
                                 </div>
 
 
-                                <label for="example-text-input" class="col-auto col-form-label">Date Range </label>
+                                <label for="example-text-input" class="col-auto col-form-label"><b>Date Range </b></label>
                                 <div class="col-lg-4">
                                     <ng-template #t let-date let-focused="focused">
                                         <span class="custom-day" [class.focused]="focused">
@@ -75,15 +75,15 @@
                                 <table *ngIf="!isDateFiltrer" class="table table-centered">
                                     <thead class="table-light">
                                         <tr>
-                                            <th style="text-align: left;">Oil Company Name</th>
-                                            <th style="text-align: left;">Petrol Pump Name</th>
-                                            <th style="text-align: left;">Account Name</th>
-                                            <th style="text-align: left;">Previous Outstanding</th>
-                                            <th style="text-align: left;">Total Purchase</th>
-                                            <th style="text-align: left;">Total Payment</th>
-                                            <th style="text-align: left;">Total Rewards</th>
-                                            <th style="text-align: left;">Net Outstanding </th>
-                                            <th style="text-align: left;">Mapping Status</th>
+                                            <th style="text-align: left;"><b>Oil Company Name</b></th>
+                                            <th style="text-align: left;"><b>Petrol Pump Name</b></th>
+                                            <th style="text-align: left;"><b>Account Name</b></th>
+                                            <th style="text-align: left;"><b>Previous Outstanding</b></th>
+                                            <th style="text-align: left;"><b>Total Purchase</b></th>
+                                            <th style="text-align: left;"><b>Total Payment</b></th>
+                                            <th style="text-align: left;"><b>Total Rewards</b></th>
+                                            <th style="text-align: left;"><b>Net Outstanding </b></th>
+                                            <th style="text-align: left;"><b>Mapping Status</b></th>
                                             <!-- <th style="text-align: left;">View Account Details</th> -->
                                         </tr>
                                     </thead>
