--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget7/trans-tables-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget7/trans-tables-widget7.component.html
@@ -10,7 +10,7 @@
                             <div class="col-auto">
                                 <label><b></b></label>
                             </div>
-                            <label for="example-text-input" class="col-auto col-form-label">Select Pump :</label>
+                            <label for="example-text-input" class="col-auto col-form-label"><b>Select Pump :</b></label>
 
                             <div class="col-auto">
                                 <input class="form-control" type="text" list="allCorporateList" placeholder="All Pump"
@@ -20,7 +20,7 @@
                                 </datalist>
                             </div>
 
-                            <label for="example-text-input" class="col-auto col-form-label">Date Range :</label>
+                            <label for="example-text-input" class="col-auto col-form-label"><b>Date Range :</b></label>
                             <div class="col-lg-4">
                                 <ng-template #t let-date let-focused="focused">
                                     <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)"
@@ -59,7 +59,7 @@
                             <div class="col-auto">
                                 <label><b></b></label>
                             </div>
-                            <label for="example-text-input" class="col-auto col-form-label">Transaction Type :</label>
+                            <label for="example-text-input" class="col-auto col-form-label"><b>Transaction Type :</b></label>
 
                             <div class="col-md-2">
                                 <select formControlName="transactionType" class="form-control"
@@ -83,17 +83,17 @@
                         <table class="table table-centered">
                             <thead class="table-light">
                                 <tr>
-                                    <th style="text-align: left;">Sr No</th>
-                                    <th style="text-align: left;">Date</th>
-                                    <th style="text-align: left;">Petrol Pump Name</th>
-                                    <th style="text-align: left;">Oil Company</th>
-                                    <th style="text-align: left;">Account Name</th>
-                                    <th style="text-align: left;">Vehicle No</th>
-                                    <th style="text-align: left;">Other Details</th>
-                                    <th style="text-align: left;">Product</th>
-                                    <th style="text-align: left;">Rate</th>
-                                    <th style="text-align: left;">Quantity</th>
-                                    <th style="text-align: left;">Amount</th>
+                                    <th style="text-align: left;"><b>Sr No</b></th>
+                                    <th style="text-align: left;"><b>Date</b></th>
+                                    <th style="text-align: left;"><b>Petrol Pump Name</b></th>
+                                    <th style="text-align: left;"><b>Oil Company</b></th>
+                                    <th style="text-align: left;"><b>Account Name</b></th>
+                                    <th style="text-align: left;"><b>Vehicle No</b></th>
+                                    <th style="text-align: left;"><b>Other Details</b></th>
+                                    <th style="text-align: left;"><b>Product</b></th>
+                                    <th style="text-align: left;"><b>Rate</b></th>
+                                    <th style="text-align: left;"><b>Quantity</b></th>
+                                    <th style="text-align: left;"><b>Amount</b></th>
 
                                 </tr>
                             </thead>
