--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget8/trans-tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget8/trans-tables-widget8.component.html
@@ -11,7 +11,7 @@
     <div class="row">
         <!-- <div class="col-md-1"></div> -->
         <!-- <div class="col-auto"> -->
-            <label for="example-text-input" class="col-auto col-form-label">Select Pump </label>
+            <label for="example-text-input" class="col-auto col-form-label"><b>Select Pump </b></label>
         <!-- </div> -->
         <div class="col-auto">
             <input class="form-control" type="text" list="crPaymentDetails2" placeholder="all pump"
@@ -33,7 +33,7 @@
         </div> -->
 
 
-        <label for="example-text-input" class="col-auto col-form-label">Date Range </label>
+        <label for="example-text-input" class="col-auto col-form-label"><b>Date Range </b></label>
         <div class="col-lg-4">
         <ng-template #t let-date let-focused="focused">
           <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)"
@@ -73,14 +73,14 @@
     <table class="table table-centered">
         <thead class="table-light">
             <tr>
-                <th style="text-align: left;">Sr. No.</th>
-                <th style="text-align: left;">Date</th>
-                <th style="text-align: left;">Petrol Pump Name</th>
-                <th style="text-align: left;">Oil Company</th>
-                <th style="text-align: left;">Key Person </th>
-                <th style="text-align: left;">Account Name</th>
-                <th style="text-align: left;">Payment Mode</th>
-                <th style="text-align: left;">Amount</th>
+                <th style="text-align: left;"><b>Sr. No</b></th>
+                <th style="text-align: left;"><b>Date</b></th>
+                <th style="text-align: left;"><b>Petrol Pump Name</b></th>
+                <th style="text-align: left;"><b>Oil Company</b></th>
+                <th style="text-align: left;"><b>Key Person </b></th>
+                <th style="text-align: left;"><b>Account Name</b></th>
+                <th style="text-align: left;"><b>Payment Mode</b></th>
+                <th style="text-align: left;"><b>Amount</b></th>
             </tr>
         </thead>
         <tbody
