--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget9/trans-tables-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget9/trans-tables-widget9.component.html
@@ -9,7 +9,7 @@
                         <div class="row">
                             <!-- <div class="col-md-1"></div> -->
                             <!-- <div class="col-auto"> -->
-                        <label for="example-text-input" class="col-auto col-form-label">Select Customer  </label>
+                        <label for="example-text-input" class="col-auto col-form-label"><b>Select Customer </b> </label>
 
                             <!-- </div> -->
                             <div class="col-auto">
@@ -21,7 +21,7 @@
                                 </datalist>
                             </div>
 
-                            <label for="example-text-input" class="col-auto col-form-label">Date Range </label>
+                            <label for="example-text-input" class="col-auto col-form-label"><b>Date Range </b></label>
                             <div class="col-lg-4">
                             <ng-template #t let-date let-focused="focused">
                               <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)"
@@ -109,15 +109,15 @@
                         <table class="table table-centered">
                             <thead class="table-light">
                                 <tr>
-                                    <th style="text-align: left;"> Transaction Date</th>
-                                    <th style="text-align: left;"> Pump Name</th>
-                                    <th style="text-align: left;"> Key Person Name </th>
-                                    <th style="text-align: left;"> Key Person Mobile </th>
-                                    <th style="text-align: left;"> Description </th>
-                                    <th style="text-align: left;"> Quantity </th>
-                                    <th style="text-align: left;"> Debit (Purchase) </th>
-                                    <th style="text-align: left;"> Credit (Payment) </th>
-                                    <th style="text-align: left;"> Balance (Outstanding) </th>
+                                    <th style="text-align: left;"><b> Transaction Date</b></th>
+                                    <th style="text-align: left;"><b> Pump Name</b></th>
+                                    <th style="text-align: left;"><b> Key Person Name </b></th>
+                                    <th style="text-align: left;"><b> Key Person Mobile </b></th>
+                                    <th style="text-align: left;"><b> Description </b></th>
+                                    <th style="text-align: left;"><b> Quantity </b></th>
+                                    <th style="text-align: left;"><b> Debit (Purchase) </b></th>
+                                    <th style="text-align: left;"><b> Credit (Payment) </b></th>
+                                    <th style="text-align: left;"><b> Balance (Outstanding) </b></th>
                                 </tr>
                             </thead>
 
