--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget3/base-tables-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget3/base-tables-widget3.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-1">
       <button type="button" class="btn btn-md btn-primary" (click)="getTransaction()">
-        view
+        View
       </button>
     </div>
     <div class="col-md-1"></div>
