--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget4/base-tables-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget4/base-tables-widget4.component.html
@@ -21,7 +21,7 @@
 
     <div class="col-md-1">
       <button type="button" class="btn btn-md btn-primary" (click)="getDayWise()">
-        view
+        View
       </button>
     </div>
 
