--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-1">
       <button type="button" class="btn btn-md btn-primary" (click)="getYearQtyWise()">
-        view
+        View
       </button>
     </div>
     <div class="col-md-1 text-sm-end">
