--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
@@ -167,6 +167,7 @@
             <tbody *ngFor="let charges of CreditRequestDataLubeTax; let i = index;">
               <tr>
                 <th align=left><b>Lubricant Name</b></th>
+
                 <th align=left><b>Tax</b></th>
                 <th align=left><b>taxDetails</b></th>
                 <th align=left><b>Bill / Ref Number</b></th>
@@ -241,7 +242,7 @@
                 <th align=left><b>Basic Amount</b></th>
                 <th align=left><b>Actual Amount</b></th>
                 <th align=left><b>Units</b></th>
-                <th align=left><b>Action</b></th>
+                <th align=center style="text-align: center;"><b>Action</b></th>
 
               </tr>
               <tr>
