--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
@@ -1,3 +1,11 @@
+<style>
+.btn-outline-success {
+  border: 1px solid #28a745 !important;
+  color: #28a745 !important;
+  background-color: transparent !important;
+}
+</style>
+
 <br>
 <form [formGroup]="addShiftForm">
   <div class="row">
@@ -2522,6 +2530,7 @@
         <div class="table-responsive mb-0">
         </div>
         <div class="row">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <div class="col-lg-4">
             <button type="button" class="btn btn-success" (click)="addCreditSales()">Add Credit Sales </button>
           </div>
@@ -3265,6 +3274,7 @@
       </div>
 
       <div class="row">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <div class="col-auto" *ngIf="!noTally">
           <span *ngIf="performStatus == 'OPEN' ">
             <button type="submit" class="btn btn-success" (click)="update()">Update & Stop Shift</button>
