--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget11/mixed-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget11/mixed-widget11.component.html
@@ -26,7 +26,7 @@
 
     <div class="col-lg-1">
       <button type="button" class="btn btn-primary w-md ms-1" name="button" (click)="getLubeTaxStatement()">
-        submit
+        Submit
       </button>
     </div>
   </div>
