--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget9/mixed-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget9/mixed-widget9.component.html
@@ -37,7 +37,7 @@
 
     <div class="col-lg-1">
       <button type="button" class="btn btn-primary w-md ms-1" name="button" (click)="showAllDataByVehicle()">
-        submit
+        Submit
       </button>
     </div>
   </div>
