--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget33/tables-widget33.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget33/tables-widget33.component.html
@@ -59,16 +59,16 @@
 
             <table class="table table-hover table-striped">
                 <thead>
-                    <th><b>Credit Days Limit</b></th>
-                    <th><b>Opening Outstanding</b></th>
-                    <th><b>Total Purchase</b></th>
-                    <th><b>Total Payment</b></th>
-                    <th><b>Net Outstanding</b></th>
+                    <th style="text-align: center;"><b>Credit Days Limit</b></th>
+                    <th style="text-align: center;"><b>Opening Outstanding</b></th>
+                    <th style="text-align: center;"><b>Total Purchase</b></th>
+                    <th style="text-align: center;"><b>Total Payment</b></th>
+                    <th style="text-align: center;"><b>Net Outstanding</b></th>
                 </thead>
                 <tbody *ngFor="let data of mapAccData">
                     <tr>
-                        <td><b> {{data.creditDayLimit}}</b> </td>
-                        <td>
+                        <td style="text-align: center;"><b> {{data.creditDayLimit}}</b> </td>
+                        <td style="text-align: center;">
                             <span *ngIf="data.openningOS < 0">
                                 ₹ &nbsp; <b> {{data.openningOS * (-1) | number:'1.2-2'}}
                                     CR</b>
@@ -78,10 +78,10 @@
                                 </b>
                             </span>
                         </td>
-                        <td> ₹ &nbsp;<b>{{data.totalPurchaseAmt | number:'1.2-2'}}</b> </td>
-                        <td> ₹ &nbsp;<b>{{data.totalPaymentAmt| number:'1.2-2' }}</b></td>
+                        <td style="text-align: center;"> ₹ &nbsp;<b>{{data.totalPurchaseAmt | number:'1.2-2'}}</b> </td>
+                        <td style="text-align: center;"> ₹ &nbsp;<b>{{data.totalPaymentAmt| number:'1.2-2' }}</b></td>
 
-                        <td style="text-align: left;">
+                        <td style="text-align: center;">
                             <span *ngIf="data.netOS < 0">
                                 ₹ &nbsp; <b> {{data.netOS *(-1) | number:'1.2-2'}}
                                     CR</b>
@@ -105,11 +105,11 @@
                 <table class="table table-hover table-striped">
                     <thead>
                         <tr>
-                            <th><b>Cr. Cycle Starts</b></th>
-                            <th><b>Cr. Cycle Ends</b></th>
-                            <th><b>Total Purchase</b></th>
-                            <th><b>Total Payment</b></th>
-                            <th><b>View Statement</b></th>
+                            <th style="text-align: center;"><b>Cr. Cycle Starts</b></th>
+                            <th style="text-align: center;"><b>Cr. Cycle Ends</b></th>
+                            <th style="text-align: center;"><b>Total Purchase</b></th>
+                            <th style="text-align: center;"><b>Total Payment</b></th>
+                            <th style="text-align: center;"><b>View Statement</b></th>
 
                         </tr>
                     </thead>
@@ -117,28 +117,28 @@
                         *ngFor="let data of fuelPaymentIntervalAll | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
 
                         <tr>
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 {{data.startDate | date:"d MMM, yyyy"}}
                             </td>
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 {{data.endDate | date:"d MMM, yyyy"}}
                             </td>
 
 
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 <span *ngIf="data.creditAmountInterval"> ₹ &nbsp;{{data.creditAmountInterval |
                                     number:'1.2-2'}}</span>
                                 <span *ngIf="!data.creditAmountInterval"> ₹ &nbsp; 0.00</span>
 
                             </td>
 
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 <span *ngIf="data.grandTotalAmountInterval"> ₹ &nbsp; {{data.grandTotalAmountInterval |
                                     number:'1.2-2'}} </span>
                                 <span *ngIf="!data.grandTotalAmountInterval"> ₹ &nbsp;0.00</span>
 
                             </td>
-                            <td  *ngIf = "accessGroup != '14' "style="color: blue;cursor: pointer;"
+                            <td  *ngIf = "accessGroup != '14' "style="color: blue;cursor: pointer;text-align: center;"
                                 (click)="updateTotalInvCreditAmtForInterval(data.startDate,data.endDate)">View
                                 Statement
                             </td>
@@ -205,16 +205,16 @@
                 <div class="card-body table-responsive">
                     <table class="table table-hover table-striped">
                         <thead>
-                            <th><b>Credit Days Limit</b></th>
-                            <th><b>Opening Outstanding</b></th>
-                            <th><b>Total Purchase</b></th>
-                            <th><b>Total Payment</b></th>
-                            <th><b>Net Outstanding</b></th>
+                            <th style="text-align: center;"><b>Credit Days Limit</b></th>
+                            <th style="text-align: center;"><b>Opening Outstanding</b></th>
+                            <th style="text-align: center;"><b>Total Purchase</b></th>
+                            <th style="text-align: center;"><b>Total Payment</b></th>
+                            <th style="text-align: center;"><b>Net Outstanding</b></th>
                         </thead>
                         <tbody *ngFor="let data of mapAccData">
                             <tr>
-                                <td><b> {{data.creditDayLimit}}</b> </td>
-                                <td>
+                                <td style="text-align: center;"><b> {{data.creditDayLimit}}</b> </td>
+                                <td style="text-align: center;">
                                     <span *ngIf="data.openningOS< 0">
                                         ₹ &nbsp; <b> {{data.openningOS * (-1) | number:'1.2-2'}}
                                             CR</b>
@@ -224,10 +224,10 @@
                                         </b>
                                     </span>
                                 </td>
-                                <td> ₹ &nbsp;<b>{{data.totalPurchaseAmt | number:'1.2-2'}}</b> </td>
-                                <td> ₹ &nbsp;<b>{{data.totalPaymentAmt| number:'1.2-2' }}</b></td>
+                                <td style="text-align: center;"> ₹ &nbsp;<b>{{data.totalPurchaseAmt | number:'1.2-2'}}</b> </td>
+                                <td style="text-align: center;"> ₹ &nbsp;<b>{{data.totalPaymentAmt| number:'1.2-2' }}</b></td>
 
-                                <td style="text-align: left;">
+                                <td style="text-align: center;">
                                     <span *ngIf="data.netOS < 0">
                                         ₹ &nbsp; <b> {{data.netOS *(-1) | number:'1.2-2'}}
                                             CR</b>
@@ -249,11 +249,11 @@
                 <table class="table table-hover table-striped">
                     <thead>
                         <tr>
-                            <th><b>Cr. Cycle Starts</b></th>
-                            <th><b>Cr. Cycle Ends</b></th>
-                            <th><b>Total Purchase</b></th>
-                            <th><b>Total Payment</b></th>
-                            <th><b>View Statement</b></th>
+                            <th style="text-align: center;"><b>Cr. Cycle Starts</b></th>
+                            <th style="text-align: center;"><b>Cr. Cycle Ends</b></th>
+                            <th style="text-align: center;"><b>Total Purchase</b></th>
+                            <th style="text-align: center;"><b>Total Payment</b></th>
+                            <th style="text-align: center;"><b>View Statement</b></th>
 
                         </tr>
                     </thead>
@@ -261,28 +261,28 @@
                         *ngFor="let data of fuelPaymentIntervalAll | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
 
                         <tr>
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 {{data.startDate | date:"d MMM, yyyy"}}
                             </td>
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 {{data.endDate | date:"d MMM, yyyy"}}
                             </td>
 
 
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 <span *ngIf="data.creditAmountInterval"> ₹ &nbsp;{{data.creditAmountInterval |
                                     number:'1.2-2'}}</span>
                                 <span *ngIf="!data.creditAmountInterval"> ₹ &nbsp; 0.00</span>
 
                             </td>
 
-                            <td style="text-align: left;">
+                            <td style="text-align: center;">
                                 <span *ngIf="data.grandTotalAmountInterval"> ₹ &nbsp;
                                     {{data.grandTotalAmountInterval | number:'1.2-2'}} </span>
                                 <span *ngIf="!data.grandTotalAmountInterval"> ₹ &nbsp;0.00</span>
 
                             </td>
-                            <td style="color: blue;cursor: pointer;"
+                            <td style="color: blue;cursor: pointer;text-align: center;"
                                 (click)="updateTotalInvCreditAmtForInterval(data.startDate,data.endDate)">View
                                 Statement</td>
                         </tr>
