--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget9/tiles-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget9/tiles-widget9.component.html
@@ -1,3 +1,12 @@
+<style>
+    
+  .btn-outline-success {
+    border: 1px solid #28a745 !important;
+    color: #28a745 !important;
+    background-color: transparent !important;
+}
+</style>
+
 <div class="card">
     <div class="card-body">
         <form [formGroup]="filterForm">
@@ -195,7 +204,7 @@
                                             <br>
                                             <button type="submit" class="btn btn-outline-success"
                                                 style="margin-top: 28px;" (click)="submitDSRDetails()">
-                                                submit
+                                                Submit
                                             </button>
                                         </td>
                                     </tr>
@@ -245,7 +254,7 @@
                                             <br>
                                             <button type="submit" class="btn btn-outline-success"
                                                 style="margin-top: 28px;" (click)="submitDSRDetails()">
-                                                submit
+                                                Submit
                                             </button>
                                         </td>
                                     </tr>
