changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
@@ -23,6 +23,7 @@
         View
       </button>
     </div>
+    <div class="col-md-1"></div>
     <div class="col-md-1 text-sm-end">
       <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
         (click)="exportToPDFMONTHQty()"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
