--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -1581,6 +1581,16 @@
       </div>
     </div>
 
+    <!-- Ubi -->
+    <div class="menu-item">
+      <a class="menu-link without-sub" routerLink="/ubi/ubiCredit" routerLinkActive="active">
+        <span class="menu-icon">
+          <app-keenicon name="switch" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title">UBI Credit</span>
+      </a>
+    </div>
+
     <br><br><br><br>
     <!-- Logout -->
     <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show"
