--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget7/base-tables-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget7/base-tables-widget7.component.html
@@ -25,6 +25,8 @@
       </button>
     </div>
 
+    
+    <div class="col-md-2"></div>
     <div class="col-md-1">
       <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
         (click)="exportToPDFDAYQty()"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
